--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
               <li><a href="index.html">Início</a></li>
               <li><a href="#">Simulador</a></li>
               <li>|</li>
-              <li><a href="#">Cadastro</a></li>
+              <li><a href="cadastro.html">Cadastro</a></li>
               <li class="agora"><a href="login.html">Login</a></li>
             </ul>
           </div>
@@ -34,11 +34,11 @@
                 <img src="./assets/img/logo.png" alt="logo da SmartIce"><br>
                 <h2>Acesse sua conta</h2>
                 <div class="campo">
-                    <label for="email">Email</label>
+                    <label for="email">Email:</label>
                     <input type="email" id="email" placeholder="email@email.com">
                 </div><br>
                 <div class="campo">
-                    <label for="senha">Senha</label>
+                    <label for="senha">Senha:</label>
                     <input type="password" id="senha" placeholder="********">
                 </div><br>
 
