--- a/cadastro.html
+++ b/cadastro.html
@@ -101,7 +101,7 @@
             <div class="navegacao">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="#">Simulador</a></li>
+                    <li><a href="simulador.html">Simulador</a></li>
                     <li>|</li>
                     <li class="agora"><a href="cadastro.html">Cadastro</a></li>
                     <li><a href="login.html">Login</a></li>
