--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
           <div class="navegacao">
             <ul>
               <li><a href="index.html">Início</a></li>
-              <li><a href="#">Simulador</a></li>
+              <li><a href="simulador.html">Simulador</a></li>
               <li>|</li>
               <li><a href="cadastro.html">Cadastro</a></li>
               <li class="agora"><a href="login.html">Login</a></li>
